--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ DB_CONNECT = 1
 DB_DIALECT = mysql
 DB_HOST = db
 DB_PORT = 3306
-DB_NAME = ProjectDB
+DB_NAME = TodoDB
 DB_USER = root
 DB_PASSWORD = ""
 DB_LOGS = 0
