--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "http-errors": "^2.0.0",
+    "http-status-codes": "^2.2.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0"
