--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ MYSQL_DATABASE = $DB_NAME
 MYSQL_ALLOW_EMPTY_PASSWORD = true
 
 API_KEY = 49125NpxRtYC
+HASHIDS_SALT = r3DtgMg9qy
+HASHIDS_LENGTH = 12
