--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "npm run build && cp .env.example .env && node ./dist/server.js",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "test": "jest ./tests"
+    "test": "jest --detectOpenHandles ./tests"
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
@@ -19,6 +19,7 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "hashids": "^2.2.10",
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.2.0",
     "morgan": "^1.10.0",
