wip: Swagger UI for OpenAPI

--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "http-status-codes": "^2.2.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.17.0"
+    "pug": "^3.0.2",
+    "sequelize": "^6.17.0",
+    "swagger-ui-express": "^4.5.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
