--- a/api_docs.yml
+++ b/api_docs.yml
@@ -20,8 +20,8 @@ tags:
     description: Basic database operations
 paths:
   /api/todo/{id}:
-    summary: Get todo item
     get:
+      description: Get todo item
       tags:
         - CRUD
       parameters:
@@ -29,8 +29,14 @@ paths:
           name: id
           required: true
           schema:
-            type: integer
+            type: string
           description: 'Hashed ID of todo item'
+        - in: header
+          name: 'X-API-Key'
+          required: true
+          schema:
+            type: string
+          description: API key for authentication
       responses:
         200:
           description: Success
@@ -43,8 +49,8 @@ paths:
         default:
           description: Success
   /api/todo:
-    summary: Add todo item
     post:
+      description: Add todo item
       tags:
         - CRUD
       requestBody:
@@ -56,6 +62,13 @@ paths:
               properties:
                 todo:
                   type: string
+      parameters:
+        - in: header
+          name: 'X-API-Key'
+          required: true
+          schema:
+            type: string
+          description: API key for authentication
       responses:
         200:
           description: Success
