--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     depends_on:
       - db
   db:
-    image: mysql
+    image: mysql:8.0
     container_name: todo-db
     restart: always
     env_file:
